2015-10-19  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Define version number here. Set to 0.0.4.

	Do not increase version number on commit! It will only be increased
	after a release has been upload to pypi.
	
	* setup.py, doc/conf.py: Use __version__ from init file.

	* doc/conf.py: Use RTD theme.

2015-10-16  Oliver Lemke  <olemke@core-dump.info>

	* setup.py: Change version to 0.0.3 and upload to pypi.

	* MANIFEST.in: Add to include extra files in sdist.

2015-10-16  Oliver Lemke  <olemke@core-dump.info>

	* typhon/legacy/__init__.py, typhon/legacy/artsXML.py,
	typhon/legacy/arts_math.py, typhon/legacy/arts_types.py:

	Added legacy module with stripped down versions of the old PyARTS XML
	routines.  These will be removed once new xml reading/writing routines
	are in place.

	* setup.py: Added python 3.3 to supported versions.

	* doc/_build: Ignore doctrees and html dirs.

2015-10-05  Oliver Lemke  <olemke@core-dump.info>

	* ChangeLog: You are here.

	* DESCRIPTION.rst, setup.py, setup.cfg, typhon/__init__.py:

	Add basic project files.

	* doc/Makefile, doc/_build, doc/_static, doc/_templates, doc/conf.py,
	doc/index.rst, doc/make.bat:

	Add sphinx documentation setup.