@@ -1,0 +1,50 @@
+typhon.legacy
+=============
+
+This module contains old functions from PyARTS to read ARTS XML data files.
+Once a new reading mechanism has been implemented in `typhon`, this module
+will be removed.
+
+.. Submodules
+.. ----------
+
+typhon.legacy.artsXML module
+----------------------------
+
+.. automodule:: typhon.legacy.artsXML
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+typhon.legacy.arts_math module
+------------------------------
+
+.. automodule:: typhon.legacy.arts_math
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+typhon.legacy.arts_types module
+-------------------------------
+
+.. automodule:: typhon.legacy.arts_types
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+typhon.legacy.general module
+----------------------------
+
+.. automodule:: typhon.legacy.general
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+
+.. Module contents
+.. ---------------
+.. 
+.. .. automodule:: typhon.legacy
+..    :members:
+..    :undoc-members:
+..   :show-inheritance:
